make mapping between OptionDescriptors and OptionContainers canonical